# zedra

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md  biome.json  package.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
ZedraFFI.xcframework/: Info.plist
android/: build.gradle  debug.keystore  settings.gradle
crates/zedra/: AGENTS.md  Cargo.toml  build.rs  cbindgen.toml
crates/zedra-crypto/: Cargo.toml
crates/zedra-crypto/src/: connection_id.rs  lib.rs  noise.rs  secure_channel.rs
crates/zedra-editor/: Cargo.toml
crates/zedra-editor/src/: buffer.rs  diff_view.rs  editor_view.rs  git_diff_view.rs  git_sidebar.rs  git_stack.rs  highlighter.rs  lib.rs  theme.rs
crates/zedra-gesture/: Cargo.toml
crates/zedra-gesture/src/: compose.rs  compositor.rs  element.rs  lib.rs  state.rs  types.rs  velocity.rs
crates/zedra-gesture/src/recognizers/: mod.rs  pan.rs  pinch.rs  tap.rs
crates/zedra-host/: AGENTS.md  Cargo.toml
crates/zedra-host/src/: account_usage.rs  agent.rs  agent_cache.rs  agent_claude.rs  agent_cli.rs  agent_codex.rs  agent_hermes.rs  agent_hook_recv.rs  agent_installed.rs  agent_maki.rs  agent_opencode.rs  agent_pi.rs  agent_setup.rs  agent_utils.rs  analytics.rs  api.rs  auth.rs  claude.rs  claude_cli_probe.rs  client.rs  clipboard.rs  delta.rs  docs_tree.rs  fs.rs  ga4.rs  ga4_stub.rs  git.rs  global_config.rs  host_info.rs  identity.rs  iroh_listener.rs  lib.rs  lsp_cli.rs  main.rs  metrics.rs  net_monitor.rs  paths.rs  pty.rs  qr.rs  registration.rs  (+17 more)
crates/zedra-host/src/agent/: amp.rs  cache.rs  claude.rs  claude_probe.rs  cli.rs  cline.rs  codex.rs  copilot.rs  cursor.rs  detect.rs  gemini.rs  goose.rs  hermes.rs  hook.rs  installed.rs  junie.rs  kilocode.rs  maki.rs  mod.rs  openclaw.rs  opencode.rs  openhands.rs  pi.rs  qoder.rs  qwen.rs  setup.rs  trae.rs  utils.rs  zencoder.rs
crates/zedra-host/tests/: e2e_rpc.rs  integration.rs
crates/zedra-identity/: Cargo.toml
crates/zedra-identity/src/: device_id.rs  keypair.rs  lib.rs  trust_store.rs
crates/zedra-ios/: Cargo.toml  build.rs  cbindgen.toml
crates/zedra-ios/src/: gpui_app.rs  lib.rs  pairing.rs
crates/zedra-lsp/: Cargo.toml
crates/zedra-lsp/src/: guard.rs  lib.rs  manager.rs  persistence.rs  policy.rs  protocol.rs  server.rs  supervisor.rs
crates/zedra-relay/: Cargo.toml
crates/zedra-relay/src/: client.rs  coord.rs  lib.rs  transport.rs  types.rs  ws_transport.rs
crates/zedra-rpc/: Cargo.toml
crates/zedra-rpc/src/: channel.rs  lib.rs  osc.rs  pairing.rs  proto.rs  proto_v2.rs  proto_v3.rs  protocol.rs  transport.rs
crates/zedra-session/: AGENTS.md  Cargo.toml
crates/zedra-session/src/: connect.rs  connect_state.rs  handle.rs  lib.rs  proxy.rs  session.rs  signer.rs  state.rs  terminal.rs
crates/zedra-ssh/: Cargo.toml
crates/zedra-ssh/src/: bridge.rs  client.rs  connection.rs  lib.rs  pairing.rs
crates/zedra-terminal/: AGENTS.md  Cargo.toml  PROOF-01-select-survives-scroll.md
crates/zedra-terminal/assets/: LICENSE-FONT
crates/zedra-terminal/src/: element.rs  input.rs  keyboard_accessory.rs  keys.rs  lib.rs  osc.rs  selection.rs  terminal.rs  theme.rs  view.rs
crates/zedra-transport/: Cargo.toml
crates/zedra-transport/src/: cf_discovery.rs  discovery.rs  durable_queue.rs  frame.rs  iroh_transport.rs  lib.rs  manager.rs  mdns.rs  pairing.rs  signaling.rs
crates/zedra-transport/src/identity/: device_id.rs  keypair.rs  mod.rs
crates/zedra-transport/src/providers/: lan.rs  mod.rs  relay.rs  relay_ws.rs  tailscale.rs
crates/zedra/src/: accessory_input.rs  active_terminal.rs  agent.rs  agent_detail.rs  agent_manage.rs  agent_manage_view.rs  agent_picker.rs  agent_session_list.rs  agent_session_view.rs  agent_sessions.rs  agent_ui.rs  ai_chat.rs  analytics.rs  android_app.rs  android_command_queue.rs  android_jni.rs  app.rs  app_action.rs  app_drawer.rs  app_preview.rs  button.rs  code_editor.rs  connecting_view.rs  deeplink.rs  delta.rs  diff_view.rs  docs_tree.rs  file_explorer.rs  file_preview_list.rs  file_preview_view.rs  file_search.rs  fonts.rs  gesture.rs  git_diff_view.rs  git_panel.rs  git_sidebar.rs  git_stack.rs  git_view.rs  gpui_app.rs  home_view.rs  (+51 more)
crates/zedra/src/agent/: mod.rs
crates/zedra/src/android/: app.rs  bridge.rs  command_queue.rs  entry.rs  jni.rs  mod.rs  sheet.rs  telemetry.rs  touch.rs
crates/zedra/src/editor/: code_editor.rs  combined_diff_view.rs  comment_composer.rs  git_diff_view.rs  git_sidebar.rs  markdown.rs  mermaid.rs  mod.rs  syntax_highlighter.rs  syntax_theme.rs
crates/zedra/src/ios/: analytics.rs  app.rs  bridge.rs  command_queue.rs  ffi.rs  gpui_app.rs  logger.rs  nslog_bridge.m
crates/zedra/src/mgpui/: drawer_host.rs  gesture.rs  input.rs  mod.rs  stack_navigator.rs
crates/zedra/src/ui/: drawer_host.rs  input.rs  mod.rs  subscreen_header.rs  subscreen_layout.rs
crates/zedra/src/vfx/: droplet.metal  droplet.rs  mod.rs  overlay.rs
crates/zedra/src/web_tunnel/: alias.rs  bridge.rs  exact_port.rs  mod.rs
docs/: ACP_PLAN.md  AI_AGENTS_CLI_INTEGRATION.md  ARCHITECTURE.md  CLIPBOARD_SYNC.md  CONVENTIONS.md  DEBUGGING.md  DELTA_INTEGRATION.md  DESIGN.md  DEVTOOL.md  EMULATOR.md  EXTENSIONS_SYSTEM.md  FIREBASE_ANALYTICS_CRASHLYTICS.md  FIX-SSH-TERMINAL-DISPLAY.md  GET_STARTED.md  GPUI_ANDROID.md  GPUI_ANDROID_PERFORMANCE.md  GPUI_ANDROID_PROGRESS.md  GPUI_ANDROID_TEXT_SELECTION.md  GPUI_ANIMATIONS.md  GPUI_CUSTOM_EFFECT.md  GPUI_FOCUS_INPUT_KEYBOARD.md  GPUI_INPUT_DICTATION.md  GPUI_MOBILE_FRAMEWORK_PLAN.md  GPUI_MOBILE_INTERACTION.md  GPUI_MOBILE_TEXT_PROTOCOL.md  GPUI_NATIVE_PRESENTATIONS.md  GPUI_RENDERING_MODEL.md  IOS_WORKFLOW.md  LIVE_ACTIVITY.md  MANAGED_AGENTS.md  MANUAL_TEST.md  NATIVE_TEXT_SELECTION_TEST_PLAN.md  NETWORK_TRANSPORT.md  PAIRING_AND_P2P.md  PINCH_ZOOM_DESIGN.md  PROTOCOL_SPECS.md  README.md  RELAY.md  RELEASE.md  SESSION_RESUME.md  (+16 more)
examples/: frontmatter-simple.md  frontmatter.md  mermaid.md  (+1 more)
ios/: Podfile  (+2 more)
zedra-host/: Cargo.toml
zedra-host/src/: qr.rs  store.rs
zedra-host/tests/: integration.rs
(+244 files in other folders)
