[workspace]
members = ["crates/*"]
exclude = ["vendor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Terminal emulation
alacritty_terminal = "0.25.1-rc1"

# SSH client
russh = { version = "0.49", default-features = false }
russh-keys = "0.49"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
log = "0.4.29"

# Async utilities
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# Utilities
futures = "0.3"
base64 = "0.22"
base64-url = "3"
hex = "0.4"
itertools = "0.14"
rust-embed = "8"

# WebSocket
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }

# Patch blade-graphics to use local version with Android fixes
[patch.'https://github.com/kvark/blade']
blade-graphics = { path = "vendor/blade/blade-graphics" }
blade-macros = { path = "vendor/blade/blade-macros" }
blade-util = { path = "vendor/blade/blade-util" }
