[workspace]
members = ["crates/*"]
exclude = ["vendor"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Terminal emulation
alacritty_terminal = "0.25.1-rc1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
log = "0.4.29"
tracing = { version = "0.1", features = ["log"] }

# Async utilities
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json"] }

# Utilities
futures = "0.3"
base64 = "0.22"
base64-url = "3"
hex = "0.4"
itertools = "0.14"
rust-embed = "8"

# P2P networking (iroh)
iroh = "0.96"
iroh-relay = { version = "0.96", features = ["server", "test-utils"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
