[workspace]
members = ["crates/*"]
exclude = ["vendor"]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2024"

[workspace.dependencies]
# Terminal emulation
alacritty_terminal = "0.25.1-rc1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
log = "0.4.29"
tracing = { version = "0.1", features = ["log"] }

# Utilities
base64-url = "3"
hex = "0.4"
itertools = "0.14"
rust-embed = "8"
data-encoding = "2"

# Crypto
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

# P2P networking (iroh)
iroh = "0.96"
iroh-relay = { version = "0.96", features = ["server", "test-utils"] }

# RPC framework (irpc)
irpc = { version = "0.12", features = ["derive", "rpc"] }
irpc-iroh = "0.12"
postcard = { version = "1", features = ["alloc"] }
serde_bytes = "0.11"

[profile.dev]
# Line tables only (not full debuginfo) — faster to generate and link.
# Full debug info (the default) is rarely needed for iOS iteration.
debug = 1
# Faster linking: avoid running dsymutil on macOS
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
