[package]
name = "zedra-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
snow = "0.9"
zedra-rpc = { path = "../zedra-rpc" }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
rand = "0.8"
log = { workspace = true }
bytes = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
