[package]
name = "zedra-editor"
version.workspace = true
edition.workspace = true

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", features = ["android"] }
zedra-theme = { path = "../zedra-theme" }
tree-sitter = "0.26"
log.workspace = true

# Language grammars
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.5"
