[package]
name = "zedra-gesture"
version.workspace = true
edition.workspace = true
description = "Gesture recognition library for GPUI on Android, inspired by react-native-gesture-handler"

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", default-features = false }
log.workspace = true
