[package]
name = "zedra-host"
version.workspace = true
edition = "2021"
description = "Desktop companion daemon for Zedra terminal"

[lib]
name = "zedra_host"
path = "src/lib.rs"

[[bin]]
name = "zedra"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# PTY spawning
portable-pty = "0.8"

# QR code generation
qrcode = "0.14"

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Random/crypto
rand.workspace = true
ed25519-dalek.workspace = true
base64-url.workspace = true
sha2.workspace = true

# Filesystem
directories = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# System info
hostname = "0.4"

# Unix process signaling (for workspace lock PID check)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Error handling
anyhow.workspace = true

# P2P networking
iroh.workspace = true
iroh-relay.workspace = true

# RPC framework
irpc.workspace = true
irpc-iroh.workspace = true
postcard.workspace = true
serde_bytes.workspace = true

# Workspace crates
zedra-rpc = { path = "../zedra-rpc" }

[dev-dependencies]
tempfile = "3"
serde_json.workspace = true
iroh = { workspace = true, features = ["test-utils"] }
irpc.workspace = true
irpc-iroh.workspace = true
rand = "0.8"

[[test]]
name = "integration"
path = "tests/integration.rs"
