[package]
name = "zedra-ios"
version.workspace = true
edition.workspace = true

[lib]
name = "zedra_ios"
crate-type = ["staticlib"]

[dependencies]
# Logging (iOS unified logging via oslog)
log = "0.4"
oslog = "0.2"

# Thread-safe command queue (same pattern as Android)
crossbeam-channel = "0.5"
once_cell = "1.19"

# Error handling
anyhow.workspace = true

# Serialization (for transport state)
serde.workspace = true
serde_json.workspace = true

# Base64 decoding for QR pairing
base64-url.workspace = true

# GPUI framework with iOS platform (Metal rendering, touch, CoreText)
gpui = { path = "../../vendor/zed/crates/gpui", default-features = false, features = ["font-kit"] }

# Transport layer
zedra-rpc = { path = "../zedra-rpc" }
zedra-relay = { path = "../zedra-relay" }
zedra-transport = { path = "../zedra-transport" }
zedra-session = { path = "../zedra-session" }

[build-dependencies]
cbindgen = "0.29"
