[package]
name = "zedra-relay"
version.workspace = true
edition.workspace = true

[dependencies]
zedra-rpc = { path = "../zedra-rpc" }
reqwest.workspace = true
tokio = { workspace = true }
tokio-tungstenite.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
