[package]
name = "zedra-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
anyhow.workspace = true
tracing.workspace = true
iroh.workspace = true
base64-url.workspace = true
data-encoding.workspace = true
hmac.workspace = true
sha2.workspace = true

# irpc RPC framework
irpc.workspace = true
irpc-iroh.workspace = true
postcard.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
