[package]
name = "zedra-session"
version.workspace = true
edition.workspace = true

[dependencies]
zedra-rpc = { path = "../zedra-rpc" }
iroh.workspace = true
irpc.workspace = true
irpc-iroh.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "net", "io-util", "sync"] }
anyhow.workspace = true
tracing.workspace = true
