[package]
name = "zedra-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", features = ["android"] }
alacritty_terminal.workspace = true
log.workspace = true
itertools.workspace = true

zedra-ssh = { path = "../zedra-ssh" }
zedra-session = { path = "../zedra-session" }
