[package]
name = "zedra-terminal"
version.workspace = true
edition.workspace = true

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", default-features = false }
alacritty_terminal.workspace = true
tracing.workspace = true
itertools.workspace = true
futures.workspace = true
tokio.workspace = true
zedra-osc = { path = "../zedra-osc" }
