[package]
name = "zedra-transport"
version.workspace = true
edition.workspace = true

[dependencies]
zedra-rpc = { path = "../zedra-rpc" }
iroh.workspace = true
tokio = { workspace = true, features = ["rt", "net", "time", "sync", "macros"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
log.workspace = true
tracing.workspace = true
base64-url.workspace = true
sha2 = "0.10"
base32 = "0.5"
rand = "0.9"

[dev-dependencies]
tempfile = "3"
