[package]
name = "zedra"
version.workspace = true
edition.workspace = true

[lib]
name = "zedra"
crate-type = ["cdylib", "staticlib"]

[features]
android-platform = []
ios-platform = []
preview = []

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", default-features = false }
http_client = { path = "../../vendor/zed/crates/http_client" }
anyhow.workspace = true
log.workspace = true
crossbeam-channel = "0.5"
once_cell = "1.19"

# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

# Workspace crates
zedra-session = { path = "../zedra-session" }
zedra-terminal = { path = "../zedra-terminal" }
zedra-rpc = { path = "../zedra-rpc" }
iroh.workspace = true
rust-embed = { workspace = true, features = ["debug-embed"] }

[target.'cfg(target_os = "android")'.dependencies]
gpui_android = { path = "../../vendor/zed/crates/gpui_android" }
gpui_wgpu = { path = "../../vendor/zed/crates/gpui_wgpu" }
android_logger = "0.15.1"
jni = "0.21.1"
ndk = "0.9"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
gpui_ios = { path = "../../vendor/zed/crates/gpui_ios", features = ["font-kit"] }
oslog = "0.2"

[build-dependencies]
cbindgen = "0.29"
cc = "1"
