[package]
name = "zedra"
version.workspace = true
edition.workspace = true

[lib]
name = "zedra"
crate-type = ["cdylib", "staticlib"]

[features]
android-platform = []
ios-platform = []
preview = []

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", default-features = false }
http_client = { path = "../../vendor/zed/crates/http_client" }
anyhow.workspace = true
log.workspace = true
crossbeam-channel = "0.5"
once_cell = "1.19"

# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"

# Workspace crates
zedra-session = { path = "../zedra-session" }
zedra-terminal = { path = "../zedra-terminal" }
zedra-rpc = { path = "../zedra-rpc" }
iroh.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rust-embed = { workspace = true, features = ["debug-embed"] }

[target.'cfg(target_os = "android")'.dependencies]
gpui_android = { path = "../../vendor/zed/crates/gpui_android" }
gpui_wgpu = { path = "../../vendor/zed/crates/gpui_wgpu" }
android_logger = "0.15.1"
jni = "0.21.1"
ndk = "0.9"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
gpui_ios = { path = "../../vendor/zed/crates/gpui_ios", features = ["font-kit"] }

[build-dependencies]
cbindgen = "0.29"
cc = "1"
