[package]
name = "zedra"
version.workspace = true
edition.workspace = true

[lib]
name = "zedra"
crate-type = ["cdylib", "staticlib"]

[features]
android-platform = []
ios-platform = []
preview = []
# Log every telemetry event to stderr/logcat. Never enable in production builds.
debug-telemetry = []

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui", default-features = false }
http_client = { path = "../../vendor/zed/crates/http_client" }
anyhow.workspace = true
tracing.workspace = true
log.workspace = true
futures.workspace = true
crossbeam-channel = "0.5"
once_cell = "1.19"

# Syntax highlighting
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = { git = "https://github.com/zed-industries/tree-sitter-typescript", rev = "e2c53597d6a5d9cf7bbe8dccde576fe1e46c5899" }
tree-sitter-c = "0.23"
tree-sitter-cpp = { git = "https://github.com/tree-sitter/tree-sitter-cpp", rev = "5cb9b693cfd7bfacab1d9ff4acac1a4150700609" }
tree-sitter-css = "0.23"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
tree-sitter-bash = "0.23"
tree-sitter-md = "0.3"
tree-sitter-html = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"

# Workspace crates
zedra-session = { path = "../zedra-session" }
zedra-terminal = { path = "../zedra-terminal" }
zedra-rpc = { path = "../zedra-rpc" }
zedra-telemetry.workspace = true
iroh.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rust-embed = { workspace = true, features = ["debug-embed"] }

[target.'cfg(target_os = "android")'.dependencies]
gpui_android = { path = "../../vendor/zed/crates/gpui_android" }
gpui_wgpu = { path = "../../vendor/zed/crates/gpui_wgpu" }
android_logger = "0.15.1"
jni = "0.21.1"
ndk = "0.9"
ndk-context = "0.1"

[target.'cfg(target_os = "ios")'.dependencies]
gpui_ios = { path = "../../vendor/zed/crates/gpui_ios", features = ["font-kit"] }

[build-dependencies]
cbindgen = "0.29"
cc = "1"
